fix đang kí nhận tin broken on mobile and fix minor line bug on gallery

--- a/css/addition-styles.css
+++ b/css/addition-styles.css
@@ -309,6 +309,7 @@ div[id^='bwg_container'] a {
 
 .thu-vien-anh-review {
 	margin-top: 0;
+	margin-bottom: 35px;
 }
 
 #gal_front_form_0 {
@@ -343,8 +344,8 @@ div[id^='bwg_container'] a {
 }
 
 .thu-vien-anh-review .bwg_album_thumb_spun1_0,
-bwg_album_thumb_spun2_0 {
-	width: 99% !important;
+.thu-vien-anh-review bwg_album_thumb_spun2_0 {
+	width: 98% !important;
 }
 
 .thu-vien-anh-review #bwg_container1_0 #bwg_container2_0 .bwg_album_thumb_spun2_0 {
@@ -363,6 +364,15 @@ bwg_album_thumb_spun2_0 {
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
+}
+
+.bwg_album_thumb_spun1_0 {
+	z-index: 102;
+	width: 98% !important;
+	backface-visibility: hidden !important;
+	-webkit-backface-visibility: hidden !important;
+	-moz-backface-visibility: hidden !important;
+	-ms-backface-visibility: hidden !important;
 }
 
 /************Photo Gallery - End *****************/
@@ -972,6 +982,18 @@ i {
 
 div[id^='bwg_container'] a {
 	float: none;
+}
+
+}
+
+@media only screen and (max-width: 380px) {
+
+.newsletter form .email-input {
+	width: 70% !important;
+}
+
+.newsletter form .btn-subscribe {
+	width: 30% !important;
 }
 
 }
